# SealPIRUpdatable

./: CTestTestfile.cmake
Testing/Temporary/: CTestCostData.txt
src/: pir_client.cpp  pir_server.cpp  pir_server.hpp
test/: CMakeLists.txt  query_test3.cpp  query_test4.cpp
